--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>bubble game</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="main">
+      <div id="pannel">
+        <div id="pannelTop">
+          <div class="elem">
+            <h3>Hit</h3>
+            <div class="box">5</div>
+          </div>
+          <div class="elem">
+            <h3>Timer</h3>
+            <div class="box">6</div>
+          </div>
+          <div class="elem">
+            <h3>Score</h3>
+            <div class="box">7</div>
+          </div>
+        </div>
+        <div id="pannelButtom">
+          <div class="bubble">2</div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
