--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bubble game</title>
+    <title>Bubble Game</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="main">
+      <div id="heading"><h1>Bubble Game</h1></div>
       <div id="pannel">
         <div id="pannelTop">
           <div class="elem">
             <h3>Hit</h3>
-            <div class="box">5</div>
+            <div class="box hitting">0</div>
           </div>
           <div class="elem">
             <h3>Timer</h3>
-            <div class="box">6</div>
+            <div class="box timing">60</div>
           </div>
           <div class="elem">
             <h3>Score</h3>
-            <div class="box">7</div>
+            <div class="box scoring">0</div>
           </div>
         </div>
-        <div id="pannelButtom">
-          <div class="bubble">2</div>
-        </div>
+        <div id="pannelBottom"></div>
       </div>
     </div>
     <script src="script.js"></script>
